--- a/css/partials/main.scss
+++ b/css/partials/main.scss
@@ -40,6 +40,12 @@ a.btn-main{
     border-top: solid 2px #000;
     margin: 0 30px;
   }
+  p{
+    margin: 10px 0;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
 #instagramFeed{
   .borderBox{
