all pages up to date except collections page cake section

--- a/css/partials/main.scss
+++ b/css/partials/main.scss
@@ -275,3 +275,26 @@ img.filler{
     border: solid 1px #000;
   }
 }
+#menuSection{
+  h2{
+    text-align: center;
+    font-family: 'Rochester', cursive;
+    color: #ff7174;
+  }
+  hr{
+    border-top: solid 2px #000;
+    margin: 0 30px;
+  }
+}
+/*======================================= Catering Page =====================================================*/
+#cateringSection{
+  h2{
+    text-align: center;
+    font-family: 'Rochester', cursive;
+    color: #ff7174;
+  }
+  hr{
+    border-top: solid 2px #000;
+    margin: 0 30px;
+  }
+}
