--- a/css/partials/responsive.scss
+++ b/css/partials/responsive.scss
@@ -44,7 +44,7 @@ $screen-sm-min: 768px;
       float: none;
       display: block;
       margin: 0 auto;
-      width: 450px;
+      width: 390px;
       clear: both;
   }
   ul#menu-main-menu{
@@ -270,6 +270,12 @@ $screen-sm-min: 768px;
   }
     /*==================== contact page ==========*/
 
+
+
+    /*==================== menu page ==========*/
+
+
+
 }
 /* Medium devices (desktops, 992px and up) =====================================================================================================*/
 @media (min-width: $screen-md-min) {
@@ -294,7 +300,7 @@ $screen-sm-min: 768px;
     }
   }
   .navbar-nav{
-    width: 540px;
+    width: 460px;
   }
   ul#menu-main-menu{
     li{
@@ -507,6 +513,20 @@ $screen-sm-min: 768px;
         }
       }
     }
+    /*==================== menu page ==========*/
+    #menuSection{
+      h2{
+        font-size: 48px;
+      }
+    }
+    /*==================== catering page ==========*/
+    #cateringSection{
+      h2{
+        font-size: 48px;
+      }
+    }
+
+
 }
 /* Large devices (large desktops, 1200px and up)============================================================================================ */
 @media (min-width: $screen-lg-min) {
