all pages updateed to the cake collections light box isuue

--- a/css/partials/footer.scss
+++ b/css/partials/footer.scss
@@ -147,5 +147,8 @@ img.footer-logo-img{
     }
 
   }
-
+  .nav>li>a:focus, .nav>li>a:hover{
+    background: transparent !important;
+    color: $rose-pink !important;
+  }
 }
