--- a/css/partials/header.scss
+++ b/css/partials/header.scss
@@ -120,6 +120,10 @@ ul#menu-main-menu{
   background: transparent !important;
   color: $rose-pink !important;
 }
+.navbar-default .navbar-collapse{
+  width: 500px;
+  margin: 0 auto;
+}
 /*================================= home page =========================================*/
 
 //slider
