--- a/css/partials/main.scss
+++ b/css/partials/main.scss
@@ -24,7 +24,8 @@ a.btn-main{
   padding: 6px 18px;
   margin: 20px auto;
   text-align: center;
-  width: 180px
+  width: 180px;
+  border-radius: 0;
 }
 #about{
   background-image: url('../images/background-rose.png');
@@ -105,6 +106,9 @@ img.filler{
     border-top: solid 2px #000;
     margin: 0 30px;
   }
+}
+.reset{
+  clear: both;
 }
 /*======================================= About Page =====================================================*/
 .contentArea{
