--- a/css/partials/main.scss
+++ b/css/partials/main.scss
@@ -1,3 +1,5 @@
+
+
 /*==========================================  Main scss ===================================================================== */
 // Home Page
 #collections{
@@ -353,4 +355,8 @@ img.filler{
       margin: 15px 0 0 0;
     }
   }
+}
+/*========================= TestingArea ===========================*/
+.testArea{
+  
 }
