devsite and local up to date

--- a/css/partials/footer.scss
+++ b/css/partials/footer.scss
@@ -39,7 +39,7 @@
     display: flex;
     justify-content: space-between;
     .twitter{
-      background: url("../images/large-twitter-clr.png") no-repeat;
+      background: url("./images/large-twitter-clr.png") no-repeat;
       display: inline-block;
       width: 250px;
       height: 150px;
@@ -49,7 +49,7 @@
       background-position-y: -150px;
     }
     .facebook{
-      background: url("../images/large-facebook-clr.png") no-repeat;
+      background: url("./images/large-facebook-clr.png") no-repeat;
       display: inline-block;
       width: 250px;
       height:150px;
@@ -59,7 +59,7 @@
       background-position-y: -150px;
     }
     .instagram{
-      background: url("../images/large-instagram-clr.png") no-repeat;
+      background: url("./images/large-instagram-clr.png") no-repeat;
       display: inline-block;
       width: 250px;
       height: 150px;
@@ -75,7 +75,7 @@
     display: flex;
     justify-content: space-between;
     .twitter{
-      background: url("../images/twitter-sprite-clr.png") no-repeat;
+      background: url("./images/twitter-sprite-clr.png") no-repeat;
       display: inline-block;
       width: 30px;
       height: 30px;
@@ -87,7 +87,7 @@
       background-position-y: -34px;
     }
     .facebook{
-      background: url("../images/facebook-sprite-clr.png") no-repeat;
+      background: url("./images/facebook-sprite-clr.png") no-repeat;
       display: inline-block;
       width: 30px;
       height: 30px;
@@ -99,7 +99,7 @@
       background-position-y: -34px;
     }
     .instagram{
-      background: url("../images/instagram-sprite-clr.png") no-repeat;
+      background: url("./images/instagram-sprite-clr.png") no-repeat;
       display: inline-block;
       width: 30px;
       height: 30px;
