homepage link to collections  changeed from original dropdown

--- a/css/modules/_fonts.scss
+++ b/css/modules/_fonts.scss
@@ -1,12 +1,12 @@
 @import url("http://fast.fonts.net/t/1.css?apiType=css&projectid=982e4e18-ef11-4188-aac2-bddd779ef9d0");
 @font-face{
   font-family:"Avenir Next W01_n6";
-  src:url("fonts/1a7c9181-cd24-4943-a9d9-d033189524e0.eot?#iefix") format("eot")
+  src:url("./css/fonts/1a7c9181-cd24-4943-a9d9-d033189524e0.eot?#iefix") format("eot")
 }
 @font-face{
   font-family:"Avenir Next W01";
-  src:url("fonts/1a7c9181-cd24-4943-a9d9-d033189524e0.eot?#iefix");
-  src:url("fonts/1a7c9181-cd24-4943-a9d9-d033189524e0.eot?#iefix") format("eot"),url("fonts/627fbb5a-3bae-4cd9-b617-2f923e29d55e.woff2") format("woff2"),url("fonts/f26faddb-86cc-4477-a253-1e1287684336.woff") format("woff"),url("fonts/63a74598-733c-4d0c-bd91-b01bffcd6e69.ttf") format("truetype"),url("fonts/a89d6ad1-a04f-4a8f-b140-e55478dbea80.svg#a89d6ad1-a04f-4a8f-b140-e55478dbea80") format("svg");
+  src:url("./css/fonts/1a7c9181-cd24-4943-a9d9-d033189524e0.eot?#iefix");
+  src:url("./css/fonts/1a7c9181-cd24-4943-a9d9-d033189524e0.eot?#iefix") format("eot"),url("./css/fonts/627fbb5a-3bae-4cd9-b617-2f923e29d55e.woff2") format("woff2"),url("./css/fonts/f26faddb-86cc-4477-a253-1e1287684336.woff") format("woff"),url("./css/fonts/63a74598-733c-4d0c-bd91-b01bffcd6e69.ttf") format("truetype"),url("./css/fonts/a89d6ad1-a04f-4a8f-b140-e55478dbea80.svg#a89d6ad1-a04f-4a8f-b140-e55478dbea80") format("svg");
   font-weight: 600;
   font-style: normal;
 }
